# hyacinth

./: .gitattributes  .gitignore  404.html  Makefile  README.md  boolean_rule_algebra.py  bot_storage.db  bot_storage.dir  config.ini.default  craiglist_notifier.py  craigslist_areas.ini  craigslist_notifier.py  crash-20230726214058-craigslist-result-details.html  discord_bot.py  docker-compose.yml  example.env  index.html  justfile  last_run.txt  mkdocs.yml  notifier_test.py  pyproject.toml  renovate.json  requirements.txt  state_names.py
.github/workflows/: docker.yml  docs.yml
docker/: service.dockerfile  worker-docker-entrypoint.sh
docker/scripts/: bot-docker-entrypoint.sh  migrations-docker-entrypoint.sh  test-docker-entrypoint.sh  worker-docker-entrypoint.sh
docs/: getting-started.md  index.md
docs/usage/: adding-filters.md  creating-a-search.md  monitoring.md
docs/usage-guide/: configuration.md  creating-a-search.md
docs/usage-guide/plugins/: craigslist.md  marketplace.md
docs/usage/plugins/: marketplace.md
getting-started/: index.html
hyacinth/: __init__.py  _entry.py  celery.py  enums.py  exceptions.py  filters.py  metrics.py  models.py  monitor.py  notifier.py  plugin.py  scheduler.py  settings.py  tasks.py
hyacinth/db/: listing.py  models.py  notifier.py  session.py
hyacinth/db/crud/: filter.py  listing.py  notifier.py  notifier_search.py  search_spec.py
hyacinth/discord/: autocomplete.py  discord_bot.py  notifier_setup.py  thread_interaction.py
hyacinth/discord/commands/: configure.py  delete.py  edit.py  filter.py  help.py  notify.py  pause.py  search.py  shared.py  show.py  stats.py
hyacinth/discord/views/: confirm_delete.py
hyacinth/sources/: abc.py  craigslist.py
hyacinth/util/: boolean_algebra.py  boolean_rule_algebra.py  craigslist.py  crash_report.py  decorators.py  geo.py  s3.py  save_pages.py  scraping.py
migrations/: 01_add_filter_type.py  02_remove_price_from_cl_search_spec.py  03_remove_distance_from_cl_search_spec.py  04_switch_to_plugins.py  add_filter_type.py
notifier_bot/: __init__.py  _entry.py  boolean_rule_algebra.py  celery.py  craigslist_notifier.py  discord_bot.py  discord_bot_old.py  filter.py  filters.py  models.py  monitor.py  notifier.py  scheduler.py  settings.py  state_names.py  tasks.py
notifier_bot/db/: listing.py  models.py  notifier.py  session.py
notifier_bot/discord/: discord_bot.py  notifier_setup.py  thread_interaction.py
notifier_bot/discord/commands/: delete.py  edit.py  filter.py  help.py  notify.py  show.py  stats.py
notifier_bot/sources/: abc.py  craigslist.py  craigslist_source.py
notifier_bot/sources/abc/: __init__.py  listing_source.py
notifier_bot/util/: boolean_rule_algebra.py  craigslist.py  filter.py  geo.py  s3.py
plugins/craigslist/: client.py  craigslist_areas.json  format.py  listings.py  models.py  plugin.py  setup.py  setup_modal.py  util.py
plugins/marketplace/: categories.html  client.py  format.py  models.py  plugin.py  setup_modal.py  util.py
search/: search_index.json
tests/: conftest.py  sample_data.py  test_models.py
tests/discord/: test_notifier_setup.py
tests/hyacinth/: test_filters.py
tests/hyacinth/db/: test_models.py
tests/hyacinth/db/crud/: test_listing.py  test_notifier.py  test_search_spec.py
tests/hyacinth/discord/: test_notifier_setup.py
tests/hyacinth/discord/commands/: test_filter.py
tests/hyacinth/util/: test_boolean_rule_algebra.py
tests/plugins/craigslist/: test_client.py  test_listings.py  test_models.py  test_util.py
tests/plugins/marketplace/: test_client.py  test_util.py
tests/resources/: __init__.py  craigslist-result-details-no-price-sample.html  craigslist-result-details-sample.html  craigslist-result-details-single-image-sample.html  craigslist-result-details-with-update-sample.html  craigslist-search-results-last-page-sample.html  craigslist-search-results-sample.html  facebook-result-details-sample.html  marketplace-result-details-sample.html  marketplace-search-results-sample.html
tests/sources/: test_craigslist_source.py
tests/sources/abc/: test_listing_source.py
tests/util/: test_boolean_rule_algebra.py  test_craigslist.py  test_geo.py
usage/adding-filters/: index.html
usage/configuration/: index.html
usage/creating-a-search/: index.html
usage/monitoring/: index.html
usage/plugins/craigslist/: index.html
usage/plugins/marketplace/: index.html
