[tool.poetry]
authors = ["Stephan Lensky <public@slensky.com>"]
description = "A Discord bot to send notifications for marketplace (Craigslist, Facebook) postings based on complex matching rules."
homepage = "https://github.com/stephanlensky/hyacinth"
include = ["LICENSE"]
license = "AGPL-3.0-only"
name = "hyacinth"
packages = [{ include = "hyacinth" }]
readme = "README.md"
repository = "https://github.com/stephanlensky/hyacinth"
version = "0.0.1"

[tool.poetry.scripts]
hyacinth = "hyacinth._entry:run_discord_bot"

[tool.poetry.dependencies]
APScheduler = "^3.10.1"
"boolean.py" = "^4.0"
boto3 = "^1.23.8"
"discord.py" = "^2.2.3"
geopandas = "^0.11.0"
geopy = "^2.2.0"
psycopg2 = "^2.9.3"
pydantic = { extras = ["dotenv"], version = "^1.9.0" }
python = ">=3.11,<3.12"
rtree = "^1.0.1"
scipy = "^1.8.0"
sqlalchemy = "^2.0.12"
wrapt = "^1.14.0"
httpx = "^0.24.1"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
boto3-stubs = { extras = ["s3"], version = "^1.23.8" }
docformatter = "^1.4"
mkdocs-material = "^8.3.6"
mypy = "^1.2.0"
pytest = "^7.1.1"
pytest-asyncio = "^0.18.3"
pytest-cov = "^4.0.0"
pytest-mock = "^3.7.0"
ruff = "^0.0.265"
types-beautifulsoup4 = "^4.12.0.5"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.ruff]
ignore = ["E501"]
line-length = 100

[tool.black]
line-length = 100

[tool.mypy]
disallow_untyped_defs = true
show_column_numbers = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "craigslist",
    "geopy.*",
    "boolean",
    "discord.*",
    "wrapt",
    "apscheduler.*",
    "geopandas.*",
    "pandas.*",
    "scipy.*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    # geopandas has not yet switched off of distutils
    'ignore:distutils Version classes are deprecated:DeprecationWarning',
    # discord.py is still using this soon to be removed module
    "ignore:.*'audioop' is deprecated:DeprecationWarning",
    # pytz warnings from apscheduler 3.x
    "ignore:The localize method is no longer necessary, as this time zone supports the fold attribute",
    # not sure where this is coming from - revisit after upgrading all deps to latest
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
]
