[tool.poetry]
authors = ["Stephan Lensky <public@slensky.com>"]
description = "A Discord bot to send notifications for marketplace (Craigslist, Facebook) postings based on complex matching rules."
homepage = "https://github.com/stephanlensky/hyacinth"
include = ["LICENSE"]
license = "AGPL-3.0-only"
name = "hyacinth"
packages = [{ include = "hyacinth" }, { include = "plugins" }]
readme = "README.md"
repository = "https://github.com/stephanlensky/hyacinth"
version = "0.0.1"

[tool.poetry.scripts]
hyacinth = "hyacinth._entry:run_discord_bot"

[tool.poetry.dependencies]
APScheduler = "^3.10.2"
aioboto3 = "^13.0.0"
beautifulsoup4 = "^4.12.2"
"boolean.py" = "^4.0"
"discord.py" = "^2.3.2"
geopandas = "^0.14.0"
geopy = "^2.3.0"
httpx = "^0.27.0"
psycopg2 = "^2.9.7"
pydantic = "^2.1.1"
pydantic-settings = "^2.0.2"
python = ">=3.13,<3.14"
rtree = "^1.0.1"
scipy = "^1.11.1"
sqlalchemy = "^2.0.19"
wrapt = "^1.15.0"
playwright = "^1.41.2"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
docformatter = "^1.7.5"
mkdocs-material = "^9.1.21"
mypy = "^1.5.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.11.1"
ruff = "^0.4.0"
types-beautifulsoup4 = "^4.12.0.6"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E501"]

[tool.black]
line-length = 100

[tool.mypy]
disallow_untyped_defs = true
show_column_numbers = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "craigslist",
    "geopy.*",
    "boolean",
    "discord.*",
    "wrapt",
    "apscheduler.*",
    "geopandas.*",
    "pandas.*",
    "scipy.*",
    "aioboto3",
    "pyppeteer.*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    # geopandas has not yet switched off of distutils
    'ignore:distutils Version classes are deprecated:DeprecationWarning',
    # discord.py is still using this soon to be removed module
    "ignore:.*'audioop' is deprecated:DeprecationWarning",
    # pytz warnings from apscheduler 3.x
    "ignore:The localize method is no longer necessary, as this time zone supports the fold attribute",
    # not sure where this is coming from - revisit after upgrading all deps to latest
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
]
